# xpath-scraper

./: Cargo.toml  readme.md
example/: Cargo.toml  readme.md
example/src/: main.rs
macro/: Cargo.toml  README.md
macro/src/: lib.rs  symbol.rs
main/: Cargo.toml  README.md
main/src/: error.rs  lib.rs
scraper/: Cargo.toml
scraper/src/: downloader.rs  error.rs  json.rs  lib.rs  scraper.rs  youtubedl.rs
