[package]
name = "scraper-example"
version = "0.1.0"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/Its-its/xpath-scraper"
respository = "https://github.com/Its-its/xpath-scraper"
readme = "README.md"
keywords = ["xpath"]
description = "Example"

[dependencies]
reqwest = "0.11"

tokio = { version = "1.3", features = ["full"] }

scraper-main = { version = "*", path = "../main" }
scraper-macros = { version = "*", path = "../macro" }