[package]
name = "scraper-macros"
version = "0.1.1"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/Its-its/xpath-scraper"
respository = "https://github.com/Its-its/xpath-scraper"
readme = "README.md"
keywords = ["xpath"]
description = "Macros implementation of #[derive(Scraper)]"

[lib]
proc-macro = true

[dependencies]
syn = { features = ["full"], version = "1.0" }
quote = "1.0"