[package]
name = "scraper-main"
version = "0.1.0"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/Its-its/xpath-scraper"
respository = "https://github.com/Its-its/xpath-scraper"
readme = "README.md"
keywords = ["xpath"]

[dependencies]
anyhow = "1.0.38"
thiserror = "1.0.24"

xpather = "0.1.4"