[package]
name = "scraper-main"
version = "0.3.0"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/Its-its/xpath-scraper"
repository = "https://github.com/Its-its/xpath-scraper"
readme = "README.md"
keywords = ["xpath"]
description = "The core framework xpath parsing"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

scraper-macros = { version = "0.2.0", path = "../macro" }

xpather = "0.3.0-beta.8"